Update asset type information

--- a/source/main/resources/com/avereon/aveon/bundles/asset.properties
+++ b/source/main/resources/com/avereon/aveon/bundles/asset.properties
@@ -1,4 +1,4 @@
 codec-flow-name=Flow
-aveon-description=CFD tools, solvers and visualization
-aveon-icon=aveon
-aveon-name=Aveon
+flow2d-description=Two dimensional airfoil flow analysis
+flow2d-icon=aveon
+flow2d-name=Flow 2D
