Better asset description

--- a/source/main/resources/com/avereon/aveon/bundles/asset.properties
+++ b/source/main/resources/com/avereon/aveon/bundles/asset.properties
@@ -1,4 +1,4 @@
 codec-flow-name=Flow
 flow2d-description=Two dimensional airfoil flow analysis
 flow2d-icon=aveon
-flow2d-name=Flow 2D
+flow2d-name=2D Airfoil Flow
