--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
 	<parent>
 		<groupId>com.avereon.pom</groupId>
 		<artifactId>mod</artifactId>
-		<version>3.2.0-SNAPSHOT</version>
+		<version>3.2.0</version>
 	</parent>
 
 	<groupId>com.avereon</groupId>
 	<artifactId>aveon</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>Aveon</name>
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>com.avereon</groupId>
 			<artifactId>curve</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>0.1</version>
 		</dependency>
 
 	</dependencies>
