New Airfoil tool

--- a/source/main/resources/com/avereon/aveon/bundles/asset.properties
+++ b/source/main/resources/com/avereon/aveon/bundles/asset.properties
@@ -2,3 +2,7 @@ codec-flow-name=Flow
 flow2d-description=Two dimensional airfoil flow analysis
 flow2d-icon=aveon
 flow2d-name=2D Airfoil Flow
+
+airfoil2d-description=Two dimensional airfoil
+airfoil2d-icon=aveon
+airfoil2d-name=2D Airfoil
