New Airfoil tool

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 
 	<properties>
 		<curve.version>[0.1,)</curve.version>
+		<marea.version>[0.1-SNAPSHOT,)</marea.version>
 		<cameo.version>2.9</cameo.version>
 		<images-folder>target/main/images</images-folder>
 	</properties>
@@ -49,6 +50,12 @@
 			<groupId>com.avereon</groupId>
 			<artifactId>curve</artifactId>
 			<version>${curve.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.avereon</groupId>
+			<artifactId>marea</artifactId>
+			<version>${marea.version}</version>
 		</dependency>
 
 	</dependencies>
