--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,6 @@
 name: CI
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - stable
-  schedule:
-    - cron: '30 12 * * *'
-  workflow_dispatch:
+on: [ push, workflow_dispatch ]
 
 env:
   AVN_PRODUCT: "aveon"
