--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
 	<parent>
 		<groupId>com.avereon.pom</groupId>
 		<artifactId>mod</artifactId>
-		<version>3.5.8</version>
+		<version>3.6.0</version>
 	</parent>
 
 	<groupId>com.avereon</groupId>
 	<artifactId>aveon</artifactId>
-	<version>1.2</version>
+	<version>1.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Aveon</name>
@@ -38,9 +38,9 @@
 	</pluginRepositories>
 
 	<properties>
-		<curve.version>0.5</curve.version>
-		<marea.version>0.3</marea.version>
-		<cameo.version>2.10</cameo.version>
+		<curve.version>0.6-SNAPSHOT</curve.version>
+		<marea.version>0.4-SNAPSHOT</marea.version>
+		<cameo.version>2.11</cameo.version>
 		<images-folder>target/main/images</images-folder>
 	</properties>
 
