Update cameo.version to 2.12-SNAPSHOT in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 	<properties>
 		<curve.version>0.6-SNAPSHOT</curve.version>
 		<marea.version>0.4-SNAPSHOT</marea.version>
-		<cameo.version>2.11</cameo.version>
+		<cameo.version>2.12-SNAPSHOT</cameo.version>
 		<images-folder>target/main/images</images-folder>
 	</properties>
 
